fix: Bottem margin for ItemPage on mobile

--- a/client/src/styles/pages/_item.scss
+++ b/client/src/styles/pages/_item.scss
@@ -12,6 +12,7 @@
     width: 90%;
     flex-direction: column;
     padding: 0;
+        margin-bottom: 5em;
   }
 
   .ItemDisplaySection {
